2014-08-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/signals.c (redisplay_after_signal)
	(info_signal_proc) <SIGWINCH>: Don't call terminal_unprep_terminal and
	terminal_prep_terminal.  This prevents flickering between the "normal"
	and "alternate" screens in an xterm when resizing.

	* info/display.c (display_update_one_window): Always display line
	continuation character in rightmost column.  Don't display an extra character
	if line wrapping is off.
	* info/window.c (window_toggle_wrap): Don't free two arrays that were
	already freed.  Disable call to display_scroll_line_starts.

2014-08-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (regexp_search): Take WINDOW argument to save results
	of a search.  All callers updated.
	* info/window.h (WINDOW): New fields 'matches', 'match_count'.
	* info/session.c (info_search_in_node_internal): Use of regexp_search
	updated.

	* info/variables.c (info_variables): New user variable
	'highlight-searches'.
	* info/display.c (highlight_searches_p): New variable.
	(display_update_window_1): New function, based on
	process_node_text in window.c.  Highlight search results if this is
	turned on.  Use struct text_buffer functions to build printed screen
	line.
	(display_update_one_window): Call display_update_window_1 instead of
	process_node_text.
	* info/terminal.c (term_so, term_se): New variables.
	(terminal_initialize_terminal): Initialize them.

	* info/session.c (info_set_node_of_window): Clear displayed
	search matches.

2014-07-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_get_node_of_file_buffer): Set body_start to 0
	for "*" node.
	* info/session.c (info_next_line, info_prev_line): Don't change goal
	column.
	* info/window.c (window_chars_to_goal): Merged into caller.
	* info/t/goal-column.sh: New test.
	* info/t/infodir/intera.info: Node "Goal column" added.

2014-07-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_search_in_node): Merged into callers in